--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@cucumber/cucumber": "^9.3.0",
     "@playwright/test": "^1.36.2",
     "chai": "^4.3.7",
+    "looks-same": "^9.0.0",
     "playwright": "^1.36.2"
   }
 }
